--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@font-face {
+  font-family: "Circular Std Book";
+  src: url("Circular_Std_Book.ttf") format("truetype");
+}
 html,
 head,
 body,
