--- a/src/card.css
+++ b/src/card.css
@@ -17,34 +17,19 @@
   transition: left 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 }
 
-.card-container:first-of-type::after {
-  content: "";
-  position: absolute;
-  width: 10%;
-  height: 100%;
-  left: -5%;
-  background: rgb(54, 69, 79);
-  background: linear-gradient(
-    -90deg,
-    rgba(54, 69, 79, 1) 0%,
-    rgb(46, 59, 67) 50%,
-    rgba(54, 69, 79, 1) 100%
-  );
-}
-
+.card-container:first-of-type::after,
 .card-container:last-of-type::after {
   content: "";
   position: absolute;
   width: 10%;
   height: 100%;
+  background: #36454f;
+  background: linear-gradient(-90deg, #36454f 000%, #2e3b43 050%, #36454f 100%);
+  left: -5%;
+}
+
+.card-container:last-of-type::after {
   right: -5%;
-  background: rgb(54, 69, 79);
-  background: linear-gradient(
-    -90deg,
-    rgba(54, 69, 79, 1) 0%,
-    rgb(46, 59, 67) 50%,
-    rgba(54, 69, 79, 1) 100%
-  );
 }
 
 header {
@@ -55,6 +40,7 @@ header {
   justify-content: center;
   align-items: center;
   font-size: xx-large;
+  text-transform: uppercase;
 }
 
 section {
@@ -68,13 +54,30 @@ section {
 .muscle-group-container {
   position: absolute;
   width: 100%;
-  height: 75%;
-  top: 12.5%;
+  height: 100%;
+  top: 0%;
   overflow-y: scroll;
+  scrollbar-width: none;
+}
+
+.muscle-group-container::-webkit-scrollbar {
+  display: none;
 }
 
 .scroller {
   width: 100%;
+}
+
+.save-container {
+  position: absolute;
+  bottom: 0;
+  height: 15%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  z-index: 2;
+  background: linear-gradient(to bottom, transparent, #36454f);
 }
 
 .save-button {
@@ -123,4 +126,3 @@ section {
   transition: all ease-in-out 0.5s;
   opacity: 0;
 }
-
