--- a/src/app.css
+++ b/src/app.css
@@ -24,10 +24,10 @@
   align-items: center;
   cursor: pointer;
   height: 3rem;
-  width: 6rem;
+  width: 90%;
   border-radius: 1rem;
   border: 0.5px solid white;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   position: absolute;
   z-index: 1;
   bottom: 1rem;
@@ -40,6 +40,8 @@
     #6169e3 100%
   );
   color: white;
+  text-transform: capitalize;
+  font-family: "Poppins", sans-serif;
 }
 
 .save-button:active {
@@ -64,4 +66,5 @@
   align-items: center;
   transition: all ease-in-out 0.5s;
   opacity: 0;
+  color: white;
 }
