--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 .save-container {
   position: absolute;
   bottom: 0;
-  height: 15%;
+  height: 4rem;
   width: 100%;
   display: flex;
   justify-content: center;
