--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,3 +1,7 @@
+:root {
+  --border-width: 2px;
+}
+
 .app {
   width: 100%;
   height: 100%;
@@ -25,34 +29,15 @@
   cursor: pointer;
   height: 3rem;
   width: 90%;
-  border-radius: 1rem;
-  border: 0.5px solid white;
   font-size: 1.5rem;
   position: absolute;
   z-index: 1;
   bottom: 1rem;
-  background: #f2a25f;
-  background: linear-gradient(
-    300deg,
-    #f2a25f 0%,
-    #e66386 27%,
-    #e15cc2 62%,
-    #6169e3 100%
-  );
+  backdrop-filter: blur(7px);
   color: white;
-  text-transform: capitalize;
-  font-family: "Poppins", sans-serif;
-}
-
-.save-button:active {
-  background: #ed7e21;
-  background: linear-gradient(
-    300deg,
-    #ed7e21 0%,
-    #dd2a5a 27%,
-    #d627ad 62%,
-    #2a35d9 100%
-  );
+  font-family: "Circular Std Book", sans-serif;
+  clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
+  position: relative;
 }
 
 .save-indicator {
@@ -67,4 +52,34 @@
   transition: all ease-in-out 0.5s;
   opacity: 0;
   color: white;
+}
+
+#top-border,
+#bottom-border {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  transition: 0.6s cubic-bezier(0.83, 0, 0.17, 1)
+}
+
+#top-border {
+  top: 0;
+  background: linear-gradient(
+    300deg,
+    #ed7e21 0,
+    #dd2a5a 27%,
+    #d627ad 62%,
+    #2a35d9 100%
+  );
+}
+
+#bottom-border {
+  bottom: 0;
+  background: linear-gradient(
+    300deg,
+    #2a35d9 0,
+    #d627ad 27%,
+    #dd2a5a 62%,
+    #ed7e21 100%
+  );
 }
