--- a/src/style/index.css
+++ b/src/style/index.css
@@ -28,8 +28,7 @@ body,
   -khtml-user-select: none; /* Konqueror HTML */
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 svg {
@@ -38,5 +37,5 @@ svg {
 }
 
 stop {
-  transition: stop-color 1s ease;
+  transition: stop-color 0.6s ease;
 }
