--- a/src/style/workout.css
+++ b/src/style/workout.css
@@ -18,41 +18,9 @@
   position: relative;
 }
 
-.set-info {
-  position: absolute;
-  width: 40%;
-  height: 200%;
-  z-index: 3;
-  background: rgb(245, 222, 179);
-  background: radial-gradient(
-    circle,
-    rgba(245, 222, 179, 1) 0%,
-    rgba(238, 198, 123, 1) 100%
-  );
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.7s cubic-bezier(0.83, 0, 0.17, 1);
-  border-radius: 1rem;
-}
-
-.set-info .triangle {
-  position: absolute;
-  width: 100%;
-  height: 33.33333%;
-  bottom: 99%;
-  clip-path: polygon(50% 0%, 33.33333% 100%, 66.66666% 100%);
-  background: rgb(245, 222, 179);
-  background: radial-gradient(
-    circle,
-    rgba(245, 222, 179, 1) 0%,
-    rgba(238, 198, 123, 1) 100%
-  );
-}
-
 .input-container {
-  width: 16rem;
+  /* border: 1px solid black; */
+  width: 18rem;
   height: 4rem;
   display: flex;
   position: relative;
@@ -64,6 +32,7 @@
   background: #36454f;
   background: linear-gradient(145deg, #313e47, #3a4a55);
   box-shadow: 20px 20px 60px #2e3b43, -20px -20px 60px #3e4f5b;
+  overflow: hidden;
 }
 
 .input-container > div {
@@ -72,16 +41,13 @@
   align-items: center;
 }
 
-.weight-label,
-.decrease-button,
-.increase-button {
-  width: 4rem;
-  height: 3rem;
-  border-radius: 1.5rem;
+.weight-label {
+  width: 6rem;
 }
 
 .decrease-button,
 .increase-button {
+  width: 4rem;
   cursor: pointer;
   font-size: 2rem;
   background: linear-gradient(
@@ -89,4 +55,30 @@
     rgba(46, 59, 67, 1) 0%,
     rgba(62, 79, 91, 1) 100%
   );
+  border-radius: 1.5rem;
+}
+
+.test {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  backdrop-filter: blur(5px);
+  border-radius: 5rem;
+  transition: 0.6s cubic-bezier(0.83, 0, 0.17, 1);
+  flex-direction: column;
+}
+
+@keyframes fading {
+  0% {
+    opacity: 0.5;
+  }
+
+  50% {
+    opacity: 0.9;
+  }
+
+  100% {
+    opacity: 0.5;
+  }
 }
