--- a/src/style/app.css
+++ b/src/style/app.css
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-self: center;
-  z-index: 2;
+  z-index: 200;
   background: linear-gradient(to bottom, transparent, #36454f);
 }
 
@@ -54,16 +54,15 @@
   color: white;
 }
 
-#top-border,
-#bottom-border {
+[id$="border"] {
   width: 100%;
-  height: 2px;
   position: absolute;
-  transition: 0.6s cubic-bezier(0.83, 0, 0.17, 1)
+  transition: all 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 }
 
 #top-border {
   top: 0;
+  height: var(--border-width);
   background: linear-gradient(
     300deg,
     #ed7e21 0,
@@ -73,10 +72,37 @@
   );
 }
 
+#left-border {
+  clip-path: polygon(0 0, 50% 0, 40% 100%, 0% 100%);
+  left: calc(-40% + var(--border-width));
+  height: 100%;
+  background: linear-gradient(
+    180deg,
+    #2a35d9 0,
+    #d627ad 27%,
+    #dd2a5a 62%,
+    #ed7e21 100%
+  );
+}
+
 #bottom-border {
   bottom: 0;
+  height: var(--border-width);
   background: linear-gradient(
     300deg,
+    #2a35d9 0,
+    #d627ad 27%,
+    #dd2a5a 62%,
+    #ed7e21 100%
+  );
+}
+
+#right-border {
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 40% 100%);
+  right: calc(-50% + var(--border-width));
+  height: 100%;
+  background: linear-gradient(
+    0deg,
     #2a35d9 0,
     #d627ad 27%,
     #dd2a5a 62%,
