--- a/src/style/workout.css
+++ b/src/style/workout.css
@@ -6,6 +6,29 @@
   height: 9rem;
 }
 
+.youtube-icon-container {
+  width: 100%;
+  height: 2rem;
+  position: relative;
+  cursor: pointer;
+}
+
+.youtube-icon {
+  height: 100%;
+  width: 2rem;
+  position: absolute;
+  right: 1rem;
+}
+
+.youtube-video-container {
+  position: absolute;
+  aspect-ratio: 16 / 9;
+  transition: 1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  height: 0;
+  background-color: black;
+  right: 0;
+}
+
 .workout-label {
   width: var(--label-width);
   height: var(--label-height);
@@ -19,7 +42,6 @@
 }
 
 .input-container {
-  /* border: 1px solid black; */
   width: 18rem;
   height: 4rem;
   display: flex;
@@ -50,15 +72,11 @@
   width: 4rem;
   cursor: pointer;
   font-size: 2rem;
-  background: linear-gradient(
-    90deg,
-    rgba(46, 59, 67, 1) 0%,
-    rgba(62, 79, 91, 1) 100%
-  );
+  background: linear-gradient(90deg, #2e3b43 0%, #3e4f5b 100%);
   border-radius: 1.5rem;
 }
 
-.test {
+.sets-and-reps-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -71,7 +89,7 @@
 
 @keyframes fading {
   0% {
-    opacity: 0.5;
+    opacity: 0.3;
   }
 
   50% {
@@ -79,6 +97,6 @@
   }
 
   100% {
-    opacity: 0.5;
+    opacity: 0.3;
   }
 }
