--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,12 @@ body,
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
-#root {
-  overflow-y: hidden;
+svg {
+  width: 100%;
+  height: 100%;
 }
 
 * {
