--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -67,3 +67,13 @@ section {
 .scroller {
   width: 100%;
 }
+
+.add-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  cursor: pointer;
+  position: relative;
+}
