--- a/src/components/Card/Workout/workout.css
+++ b/src/components/Card/Workout/workout.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   height: 9rem;
+  /* margin-bottom: 1rem; */
 }
 
 .youtube-icon-container {
@@ -63,7 +64,7 @@
   overflow: hidden;
 }
 
-.input-container > div {
+.input-container > div:not(.sets-and-reps-container) {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,6 +92,26 @@
   border-radius: 5rem;
   transition: 0.6s cubic-bezier(0.83, 0, 0.17, 1);
   flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto 4rem;
+  place-items: center;
+}
+
+.sets-and-reps-container > div:first-of-type {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+}
+
+.delete-button {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  cursor: pointer;
+  width: 40%;
+  height: 40%;
+  display: grid;
+  place-items: center;
+  z-index: 2;
 }
 
 @keyframes fading {
